@@ -1,4 +1,4 @@
-$NetBSD: pcidevs,v 1.906 2007/10/22 10:33:03 nisimura Exp $
+$NetBSD: pcidevs,v 1.907 2007/10/22 14:59:38 manu Exp $
 
 /*
  * Copyright (c) 1995, 1996 Christopher G. Demetriou
@@ -1858,6 +1858,7 @@ product MARVELL YUKON_C036	0x4366	Yukon 88EC036
 product MARVELL YUKON_C032	0x4367	Yukon 88EC032
 product MARVELL YUKON_C034	0x4368	Yukon 88EC034
 product MARVELL YUKON_C042	0x4369	Yukon 88EC042
+product MARVELL YUKON_CO55	0x436a	Yukon 88ECO55
 product MARVELL	GT64120		0x4620	GT-64120 System Controller
 product MARVELL	BELKIN		0x5005	Belkin Gigabit Ethernet
 product MARVELL 88SX5040	0x5040	88SX5040 SATA
